Implement basic webrequests for controlunits